agrega tittle e icono

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Donaciones</title>
+    <title>Donaciones Animal Libre</title>
+    <link rel="icon" type="image/png" href="assets/ico.png">
     <!-- Tailwind y estilos -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
