cambia el color de verde a amarillo pedido por mau

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div class="text-center">
             <div class="mb-6 flex justify-center"></div>
             <h2 class="text-2xl font-bold mb-4 text-white text-shadow-dark">Meta de Donaciones</h2>
-            <p class="text-4xl font-bold mb-2 text-green-600" id="currentAmount">$ 15.00</p>
+            <p class="text-4xl font-bold mb-2" style="color: #B9B6B3;" id="currentAmount">$ 15.00</p>
             <p class="text-white text-shadow-dark mb-4">
-                recaudado de <span class="font-semibold text-green-600" id="goalAmount">$ 1,000.00</span>
+                recaudado de <span class="font-semibold text-white-600" id="goalAmount">$ 1,000.00</span>
             </p>
             <div class="relative flex items-center gap-4">
                 <div class="flex-grow h-4 bg-gray-200 rounded-full overflow-hidden">
