soluciona el cursor de texto de toda la pagina

--- a/index.html
+++ b/index.html
@@ -132,6 +132,21 @@
    </div>
 
    <style>
+
+* {
+           user-select: none;
+           -webkit-user-select: none;
+           -moz-user-select: none;
+           -ms-user-select: none;
+       }
+
+       input, textarea {
+           user-select: text;
+           -webkit-user-select: text;
+           -moz-user-select: text;
+           -ms-user-select: text;
+       }
+
        .text-shadow-dark {
            text-shadow: 
                1px 1px 0 #000,
