comente la seccion progreso y la barra

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
            <div class="absolute inset-0 bg-black/50"></div>
        </div>
 
-       <div class="relative z-10">
+       <!-- <div class="relative z-10">
            <div class="container mx-auto max-w-4xl pt-8">
                <div id="donationProgressContainer" class="w-full bg-black/30 rounded-lg shadow p-6">
                    <div class="text-center">
@@ -55,7 +55,7 @@
                        <p class="text-sm text-white text-shadow-dark mt-2" id="progressPercentage">1.5% completado</p>
                    </div>
                </div>
-           </div>
+           </div> -->
 
            <div class="container mx-auto max-w-4xl py-8">
                <div id="donationForm" class="bg-black/30 p-6 rounded-lg shadow-xl backdrop-blur-sm">
