--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                        <i class="fas fa-lock mr-2"></i>
                        <p class="text-sm">Todas las transacciones son procesadas de forma segura y encriptada.</p>
                    </div>
+
+                   <div id="captchaSection"></div>
                </div>
            </div>
        </div>
@@ -296,5 +298,6 @@
        });
    </script>
    <script src="js/components/DonationProgress.js"></script>
+   <script type="module" src="js/app.js"></script>
 </body>
 </html>
